// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValueToggleFilter render - active 1`] = `
<div
  class="euiFilterButton__wrapper css-gh5fry-wrapper"
>
  <button
    aria-pressed="true"
    class="euiButton euiFilterButton euiFilterButton-isSelected euiFilterButton-hasActiveFilters euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-base-text-euiFilterButton-hasActiveFilters-toggle-isSelected"
    id="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
        data-text="Kibana"
        title="Kibana"
      >
        Kibana
      </span>
    </span>
  </button>
</div>
`;

exports[`FieldValueToggleFilter render - active negated - custom negated name 1`] = `
<div
  class="euiFilterButton__wrapper css-gh5fry-wrapper"
>
  <button
    aria-pressed="true"
    class="euiButton euiFilterButton euiFilterButton-isSelected euiFilterButton-hasActiveFilters euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-base-text-euiFilterButton-hasActiveFilters-toggle-isSelected"
    id="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
        data-text="Others"
        title="Others"
      >
        Others
      </span>
    </span>
  </button>
</div>
`;

exports[`FieldValueToggleFilter render - active negated 1`] = `
<div
  class="euiFilterButton__wrapper css-gh5fry-wrapper"
>
  <button
    aria-pressed="true"
    class="euiButton euiFilterButton euiFilterButton-isSelected euiFilterButton-hasActiveFilters euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-base-text-euiFilterButton-hasActiveFilters-toggle-isSelected"
    id="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
        data-text="Not Kibana"
        title="Not Kibana"
      >
        Not Kibana
      </span>
    </span>
  </button>
</div>
`;

exports[`FieldValueToggleFilter renders 1`] = `
<div
  class="euiFilterButton__wrapper css-gh5fry-wrapper"
>
  <button
    aria-pressed="false"
    class="euiButton euiFilterButton euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-base-text-euiFilterButton-toggle"
    id="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
        data-text="Kibana"
        title="Kibana"
      >
        Kibana
      </span>
    </span>
  </button>
</div>
`;
